--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -9,24 +9,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".TuActividad">
+        tools:context=".TuActividad"
+        android:background="@drawable/desktop_wallpaper_carbon_fiber_22241_px">
 
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="576dp"
+            android:layout_height="568dp"
             android:layout_above="@id/bottom_navigation"
-            android:background="@color/black">
+            android:layout_below="@+id/d"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="0dp"
+            android:background="@color/grey">
 
-            <FrameLayout
-                android:id="@+id/hiloarriba"
+            <ListView
+                android:id="@+id/listviewPrincipal"
                 android:layout_width="match_parent"
-                android:layout_height="7dp"
-                android:layout_marginBottom="567dp"
-                android:background="@drawable/photo_1545873681_d8affd67677b">
-
-            </FrameLayout>
+                android:layout_height="match_parent" />
         </FrameLayout>
+
+
 
         <FrameLayout
             android:id="@+id/hiloabajo"
@@ -38,21 +43,29 @@
         </FrameLayout>
 
 
+
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="200px"
             android:layout_alignParentBottom="true"
-            android:background="@drawable/textura_fondo_lienzo_papel_viejo_667511_453"
-            app:menu="@menu/menu_bottom_navigation" />
+            android:layout_marginBottom="0dp"
+            style="@style/MyBottomNavigationView"
+            app:menu="@menu/menu_bottom_navigation"
+            />
 
         <RelativeLayout
+            android:id="@+id/d"
             android:layout_width="match_parent"
-            android:layout_height="78dp"
-            android:background="@drawable/textura_fondo_lienzo_papel_viejo_667511_453"
+            android:layout_height="70dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:background="@color/greyf"
             android:orientation="vertical"
-            tools:context=".TuActividad"
-            >
+            tools:context=".TuActividad">
 
             <TextView
                 android:id="@+id/textView"
@@ -60,9 +73,9 @@
                 android:layout_height="36dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="33dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="18dp"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="29dp"
                 android:layout_toEndOf="@+id/imageView2"
                 android:fontFamily="@font/alfa"
