--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="grey">#646464</color>
     <color name="greyf">#393939</color>
     <color name="whetef">#AFAFAF</color>
+    <color name="Red">#AFAFAF</color>
 </resources>
